test/fail/MultipleNotations.agda
-- Andreas, 2014-09-23

module _ where

syntax c x   = ⟦ x ⟧
syntax c x y = x + y

-- Should complain about multiple notations.
